# fastapi-starter

./: .gitignore  Makefile  README.md  alembic.ini  local.env  pyproject.toml  pyrightconfig.json
.brev/: setup.sh
fastapi_starter/: __init__.py  __main__.py  app.py  config.py  database.py  log.py  models.py  pagination.py  prefix_id.py  utils.py  views.py
migrations/: env.py
migrations/versions/: 20210528001153_9aa12e328cd8_init.py  20210528234150_d14d47ff99a0_init.py  20210530103814_0f759d721f55_init.py  20210605000301_fa4caf0a7217_init.py  20210618000953_9c08bdc2c8bd_init.py
